# pjp_compressor_v2

./: .gitignore  LICENSE  README.md  _PDF 画像圧縮コードのバグ指摘 .md  _PDF圧縮アプリの画像黒潰れ原因 .md  backup.ps1  compressor_launcher.ps1  compressor_launcher.py  compressor_launcher.spec  compressor_launcher_pyside.py  compressor_launcher_pyside.spec  compressor_launcher_tkinter.py  compressor_launcher_tkinter.spec  compressor_utils.py  configs.py  pjp_compressor.iss  plan-guiRedesign.prompt.md  plan-pdfNativeCompression.prompt.md  pyproject.toml  requirements.txt  sound_utils.py  ui_app.py  ui_pyside.py  ui_tkinter.py  vendor_zip.ps1
.github/prompts/: plan-cmykToRgbConversion.prompt.md  plan-compressorUtilsModuleSplit.prompt.md  plan-configSplit.prompt.md  plan-copyNonTargetFiles.prompt.md  plan-exeIconAndStartupSplash.prompt.md  plan-externalToolBundledFallback.prompt.md  plan-frontendPylanceRemediation.prompt.md  plan-logLanguageTranslate.prompt.md  plan-mainWindowScrollAndProgressTabMove.prompt.md  plan-pathlibPathUnification.prompt.md  plan-pdfDebugMode.prompt.md  plan-pdfPngQuantization.prompt.md  plan-pjpCompressorV2.prompt.md  plan-pjpCompressorV2BackendRefactor.prompt.md  plan-pjpCompressorV2RefactorSteps.prompt.md  plan-pjpCompressorV2TkinterRefactor.prompt.md  plan-pjpCompressorV2TkinterUiSeparation.prompt.md  plan-uiI18n.prompt.md  (+8 more)
Documentation/: README.html  README.md  flow_sequence_and_class_diagrams.html  flow_sequence_and_class_diagrams.md  pandoc_script.txt
backend/: __init__.py  capabilities.py  contracts.py  settings.py
frontend/: __init__.py  bootstrap.py  i18n.py  settings.py  sound_utils.py  ui_contracts.py  ui_tkinter.py  ui_tkinter_controller.py  ui_tkinter_mapper.py  ui_tkinter_state.py  ui_tkinter_view.py
scripts/: get_version.py  tkinter_regression_check.py
shared/: __init__.py  configs.py  locale_catalog.py  runtime_paths.py
tests/: conftest.py
(+41 files in other folders)
