[project]
name = "pjp-compressor-v2"
version = "2.0.0"
description = "PDF, JPEG, PNG compressor GUI application version 2."
readme = "./Documentation/README.md"
requires-python = ">=3.13"
dependencies = [
    "Pillow",
    "PyMuPDF",
    "pikepdf",
    "pyside6>=6.10.2",
    "tkinterdnd2>=0.4.3",
    "pygame>=2.3.0",
]

